# linux_mod_manager

./: .gitignore  Cargo.toml  README.md  fr.daemonwhite.mod_manager.json  meson.build  meson_options.txt
data/: fr.daemonwhite.mod_manager.desktop.in  fr.daemonwhite.mod_manager.gschema.xml  fr.daemonwhite.mod_manager.gschema.xml.in  fr.daemonwhite.mod_manager.metainfo.xml.in  fr.daemonwhite.mod_manager.service.in  meson.build  py_mod_manager.gresource.xml  py_mod_manager.gresource.xml.in  rust_linux_mod_manager.gresource.xml.in
data/css/: style.css
data/gtk/: help-overlay.blp
data/icons/: meson.build
data/ui/: mod.blp  modal_load.blp  prefference_settings.blp  settings.blp  widget_progress_row.blp  widget_switch_info_row.blp  window.blp
data/ui/modal/: choose_games.blp  load.blp  preference_mod.blp  prefferences.blp
data/ui/stack/: error.blp  mod.blp  order.blp  settings.blp
data/ui/widgets/: check_row.blp  install_row.blp  preference_group_model.blp  preference_mod_stackpage.blp  progress_row.blp  stape_row.blp
flatpak/: fr.daemonwhite.mod_manager.Devel.json  fr.daemonwhite.mod_manager.json  fr.daemonwhite.mod_manager.json~  fr.daemonwhite.mod_manager_devel.json  python3-lxml.json  python3-py7zr.json  python3-pyppmd.json  python3-rarfile.json
po/: POTFILES  POTFILES.in  meson.build
src/: application.rs  config.rs  config.rs.in  const.in  const.py  main.py  main.rs  meson.build  py_mod_manager.in  rust_linux_mod_manager.gresource.xml  window.py  window.rs  window.ui
src/custom_widget/: check_row.py  install_row.py  preference_group_model.py  preference_mod_stackpage.py  progress_row.py  progresse_row.py  stape_row.py  switch_info_row.py
src/dialout/: replace.py
src/mod_handlers/: configure.py  conflit.py  download.py  install.py  mod.py
src/modal/: choose_games.py  load.py  preference_mod.py  preferences.py
src/plugin_controller/: detect_game.py  factory.py  plugin.py  plugin_base.py  plugin_conf_mod.py  plugin_detect_game.py  plugin_game.py
src/plugins/: oblivion.py  skyrim.py
src/plugins/detect_conf_mod/: fomod_parser.py
src/plugins/detect_conf_mod/fomod/: __init__.py  enum.py  node.py  parser.py  struct.py
src/plugins/detect_games/: heroic.py  steam.py
src/plugins/games/: falloutnw.py  oblivion.py  skyrim.py
src/stack/: error.py  mod.py  order.py  settings.py
src/utils/: conf.py  create_default_mod_path.py  current_game.py  files.py  list_model.py  plugin_conf.py  plugin_loaders.py  stape.py  xdg.py
